# ts_ess_csc

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py
conda/: meta.yaml
doc/: conf.py  index.rst  manifest.yaml  protocols.rst  rpi_protocol.rst  version_history.rst
doc/news/: DM-50329.bugfix.1.rst  DM-50329.bugfix.rst  DM-50329.feature.rst  DM-50598.misc.rst  DM-50598.perf.rst  DM-50822.removal.1.rst  DM-50822.removal.rst
python/lsst/ts/ess/: ESS_CloudRainLight_Publisher.py  ESS_CloudRainLight_Subscriber.py  ESS_Temperature4Ch_Publisher.py  ESS_Temperature4Ch_Subscriber.py  ESS_start.py  __init__.py  (+18 more)
schema/: ess.yaml
tests/: ESS_start.py  ESS_temperature_4ch_reader.py  test_anemometer_reader.py  test_anemometer_reader_ftdi.py  test_anemometer_reader_rpihat.py  test_ess_csc.py  test_ess_instrument_object.py  test_mock_anemometer.py  test_mock_temperature_sensor.py  test_sel_instrument.py  test_sel_temperature_reader.py  test_sel_temperature_reader_ftdi.py  test_sel_temperature_reader_rpihat.py  test_siglent_ssa3000x_spectrum_analyzer_data_client.py  test_young_32400_weather_station_data_client.py
tests/data/config/: _init.yaml  _labels.yaml  tcpip_temperature_sensor.yaml  test_all_sensors.yaml  test_lightning_sensors.yaml  test_one_temp_sensor.yaml  test_snmp_data_client.yaml  test_spectrum_analyzer_slow.yaml  test_weather_station.yaml
tests/data/snmp/: pdu_output.txt  raritan_output.txt  schneiderPm5xxx_output.txt  xups_output.txt
ups/: ts_ess.table  ts_ess_csc.table
(+30 files in other folders)
