[flake8]
max-line-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude =
  bin,
  doc,
  **/*/__init__.py,
  **/*/version.py,
  python/lsst/ts/ess/ESS_*.py,
  python/lsst/ts/ess/ess_marshaller.py,
  python/lsst/ts/ess/serialhat.py,
  tests/.tests

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503

[metadata]
version = attr: setuptools_scm.get_version
